--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,13 +5,26 @@
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 120px;
-
+    width: 800px;
+    margin: 0  auto;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    border: 5px dotted purple;
 }
 .recipe {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 50px;
     color: black;
     text-align: center;
+    list-style: none;
+    display: block;
+    border: 5px dotted black;
+    background-color: white;
+    padding: 10px;
+    width: fit-content;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }
 body{
     background-color: wheat;
