--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,8 +17,11 @@ body{
     background-color: wheat;
 }
 #image {
-    width: 500px;
+    width: 400px;
     height: auto;
+    margin: 0 auto;
+    display: block;
+    border: 2px solid black;
 }
 #description-title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -35,13 +38,22 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 200;
     font-size: 25px;
-    text-align: center;
     color: black;
-}
+    display:block;
+    text-align: center;
+    border-bottom: 3px solid black;
+    margin: auto;
+    width: 200px;
+    padding-left: 10px;
+    }
 .ingredient {
     font-size: 18px;
     text-align: center;
-    background-color: white;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 5px;
 }
