--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,8 +4,8 @@
     background-color: beige;
     color: black;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 120px;
-
+    font-size: 80px;
+    padding: 15px;
 }
 .recipe {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
